--- a/BuscaCep/BuscaCep.csproj
+++ b/BuscaCep/BuscaCep.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Serialization" />
@@ -48,10 +51,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\JsonCEP.cs" />
     <Compile Include="Connected Services\WSCorreios\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
+    <Compile Include="FormJSON.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormJSON.Designer.cs">
+      <DependentUpon>FormJSON.cs</DependentUpon>
     </Compile>
     <Compile Include="FormXML.cs">
       <SubType>Form</SubType>
@@ -61,6 +71,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="FormJSON.resx">
+      <DependentUpon>FormJSON.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormXML.resx">
       <DependentUpon>FormXML.cs</DependentUpon>
     </EmbeddedResource>
@@ -239,6 +252,7 @@
     <None Include="Connected Services\WSCorreios\BuscaCep.WSCorreios.VerificaSeTodosObjetosCanceladosResponse.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -253,7 +267,6 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Classes\" />
     <Folder Include="Images\" />
   </ItemGroup>
   <ItemGroup>
